[FIX] web_enterprise: remove scrollbar on editable list
Because of the right border on the td in the editable list view, there was a
scrollbar when editing a row.

closes odoo/enterprise#4038

--- a/web_enterprise/static/src/scss/list_view.scss
+++ b/web_enterprise/static/src/scss/list_view.scss
@@ -158,7 +158,7 @@
                     border-bottom: 1px solid red;
                 }
             }
-            &:not(.o_readonly_modifier) {
+            &:not(.o_readonly_modifier):not(:last-child) {
                 border-right: 1px solid $table-border-color;
             }
         }
